[gd_scene load_steps=2 format=3 uid="uid://battle_scene"]

[ext_resource type="Script" path="res://scripts/Battle.gd" id="1"]

[node name="Battle" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.2, 0.15, 0.25, 1)

[node name="BattleArea" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 0.5

[node name="EnemySprite" type="ColorRect" parent="BattleArea"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -50.0
offset_top = 100.0
offset_right = 50.0
offset_bottom = 200.0
grow_horizontal = 2
color = Color(0.8, 0.2, 0.2, 1)

[node name="PlayerSprite" type="ColorRect" parent="BattleArea"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -120.0
offset_right = 40.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 0
color = Color(0.2, 0.4, 0.8, 1)

[node name="EnemyHP" type="Label" parent="BattleArea"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 50.0
offset_right = 100.0
offset_bottom = 80.0
theme_override_font_sizes/font_size = 18
text = "Enemy HP: 100/100"
horizontal_alignment = 1

[node name="ActionArea" type="Control" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 1.0

[node name="BattleLog" type="TextEdit" parent="ActionArea"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -150.0
editable = false
wrap_mode = 1

[node name="ActionButtons" type="HBoxContainer" parent="ActionArea"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -120.0
offset_right = -20.0
offset_bottom = -20.0
theme_override_constants/separation = 15
alignment = 1

[node name="AttackButton" type="Button" parent="ActionArea/ActionButtons"]
layout_mode = 2
size_flags_horizontal = 3
text = "Attack"

[node name="SkillButton" type="Button" parent="ActionArea/ActionButtons"]
layout_mode = 2
size_flags_horizontal = 3
text = "Skill"

[node name="ItemButton" type="Button" parent="ActionArea/ActionButtons"]
layout_mode = 2
size_flags_horizontal = 3
text = "Item"

[node name="FleeButton" type="Button" parent="ActionArea/ActionButtons"]
layout_mode = 2
size_flags_horizontal = 3
text = "Flee"